# eom

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: ci-gh-actions.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: auth.rst  bastion.rst  governor.rst  index.rst  metrics.rst  overview-configuration.rst  overview-logging.rst  overview.rst  rbac.rst  utils-log.rst  utils-redis-pool.rst  utils.rst  uwsgi-logvar-mapper.rst  uwsgi.rst  version.rst
docs/changes/: 0.7.0.rst  0.8.0.rst  development.rst  index.rst
docs/community/: contribute.rst  faq.rst  help.rst
docs/user/: install.rst  intro.rst  quickstart.rst  tutorial.rst
eom/: __init__.py  auth.py  bastion.py  governor.py  metrics.py  proxy.py  rbac.py  version.py
eom/examples/: governor-app.py
eom/tests/: helpers.py
eom/utils/: log.py  redis_pool.py
eom/uwsgi/: README.rst  __init__.py  logvar_mapper.py
etc/: bastion.json-sample  eom.conf-sample  governor-project.json-sample  governor.json-sample  logging.conf-sample  map.json-sample
examples/: auth_app.py  governor_app.py  reverse_proxy_app.py
tests/: test_auth.py  test_bastion.py  test_governor.py  test_metrics.py  test_proxy.py  test_rbac.py  test_uwsgi.py  util.py
tests/functional/: test_governor.py  test_uwsgi_mapper.py  test_uwsgi_requests.py
tests/mocks/: servicecatalog.py
tests/util/: __init__.py  httpstatsd.py  statsd_http_client.py
