[metadata]
name = eom
version = 0.8.2
summary = Experimental OpenStack WSGI Middleware
description-file =
    README.rst
license = Apache-2
author = Benjamen Meyer
author-email = bm_witness@yahoo.com
maintainer = Benjamen Meyer
maintainer-email = bm_witness@yahoo.com
home-page = https://github.com/BenjamenMeyer/eom
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    eom

[nosetests]
where=tests
verbosity=2

with-doctest = true

cover-package = eom
cover-html = true
cover-erase = true
cover-inclusive = true

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1

